# slack-pub-bot

./: .gitignore  README.md  deploy.sh  manifest.json  pyproject.toml
.github/workflows/: black.yml
src/: main.py  requirements.txt  slack_link_utils.py  url_utils.py
src/common/: slack_gcf_handler.py
src/conf/: assistant.json
src/module/: slack_assistant.py  slack_gcf_handler.py
tests/module/: test_slack_assistant.py
