[project]
name = "main"
version = "0.1.0"
description = ""
authors = [{ name = "bulldra", email = "bulldra@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = "==3.12.0"
dependencies = [
    "Flask==2.3.3",
    "functions-framework==3.4.0",
    "google-cloud-logging==3.5.0",
    "google-cloud-pubsub==2.17.1",
    "beautifulsoup4==4.12.2",
    "types-beautifulsoup4==4.12.0",
    "requests==2.31.0",
    "types-requests==2.31.0",
    "slack-bolt>=1.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]
